<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTintMode="src_in"
        tools:context=".PartidasActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/blanco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/Preguntas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/partidas_text">

            <TextView
                    android:id="@+id/p4"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/respuestaCorrecta"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/p4"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/p3"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="4" />

            <TextView
                    android:id="@+id/p5"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/respuestaCorrecta"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/p5"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/p4"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="5" />

            <TextView
                    android:id="@+id/p2"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/respuestaCorrecta"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/p2"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/p1"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2" />

            <TextView
                    android:id="@+id/p3"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/respuestaCorrecta"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/p3"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/p2"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="3" />

            <TextView
                    android:id="@+id/p1"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/respuestaCorrecta"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/p1"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:id="@+id/prueba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Puntos: 15" />

        <TextView
                android:id="@+id/partidas_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/partidas_respuestas"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prueba"
                tools:text="Respuestas:" />

        <ImageButton
                android:id="@+id/btn_eliminar_partida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_delete_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
